correctly aligned about me page

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -1,5 +1,8 @@
 .about-me-row {
   min-height: 78%;
-  align-items: center;
   text-align: center;
+}
+
+.about-me-header-row {
+  margin-top: 100px;
 }
